# customer_triage

./: .env  README.md  alembic.ini  plan.drawio  pyproject.toml  test_database.py
alembic/: env.py
alembic/versions/: 4706175d180c_add_integrations_table.py  eb97bba708c6_add_product_and_inventory_tables.py  f50a0e30cf7f_create_business_table.py
src/agent/prompts/: customer.ipynb  prompts.py  templates.md
src/app/: main.py
src/app/api/: routes.py
src/app/core/: config.py  database.py
src/app/models/: __init__.py  base.py  business.py  integrations.py  inventory.py  inventory_events.py  product.py
src/app/schemas/: business.py
src/app/services/: business.py
