[project]
name = "customer-triage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.9",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
